fix spacing

--- a/controller/AdminUI/src/app/components/layout/layout-main/layout-main.component.scss
+++ b/controller/AdminUI/src/app/components/layout/layout-main/layout-main.component.scss
@@ -111,5 +111,5 @@ cursor: pointer;
     border-radius:5px;
 }
 .header-title{
-    margin-left:20px;
+    margin-left:10px;
 }
